manifests/dotnetyaml2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: hello-dotnet2
  name: hello-dotnet2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hello-dotnet2
  template:
    metadata:
      labels:
        run: hello-dotnet2
    spec:
      containers:
      - name: helloworldaspnetcore2
        image: helloworldaspnetcore:v2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
