manifests/dotnetservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-dotnet
  name: hello-dotnet
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: hello-dotnet
  type: NodePort
