manifests/hello-dotnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-dotnet
  labels:
    run: hello-dotnet
spec:
  - rules:
    http:
      paths:
      - backend:
          service:
            name: hello-dotnet
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
