manifests/ingresshost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  ingressClassName: nginx
  rules:
  - host: app1.yashdev.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-dotnet
            port:
              number: 8081
  - host: app2.yashdev.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-dotnet2
            port:
              number: 8082
